# receipt-printer

./: .gitignore  README.md  pyproject.toml
src/idea_print/: __init__.py  auth.py  cli.py  config.py  dedupe.py  renderer.py  server.py  template.py
src/idea_print/transport/: __init__.py  base.py  file.py  serial.py  usb.py
tests/: __init__.py  test_auth.py  test_renderer.py  test_template.py
