[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "idea-print"
version = "0.1.0"
description = "Receipt printer agent for thermal printers via ESC/POS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyserial>=3.5",
    "pyusb>=1.2.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[project.scripts]
idea-print = "idea_print.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/idea_print"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
